# test-suit-generater-crewai

./: .env.example  .gitignore  Architectural Walkthrugh.md  HowTo.md  README.md  UserStory1.txt  UserStory2.txt  UserStory3.txt  pyproject.toml  requirements.txt  suite.json  test_suite.json  test_suite_generator.py
test_suite_crew/: AGENTS_DIAGRAM.md  pyproject.toml  test_suite_flow.html
test_suite_crew/output/: test_suite.json
test_suite_crew/src/test_suite_crew/: main.py
test_suite_crew/src/test_suite_crew/crews/qa_crew/: models.py  qa_crew.py
test_suite_crew/src/test_suite_crew/crews/qa_crew/config/: agents.yaml  tasks.yaml
tests/: test_test_suite_generator.py
